src/main/java/com/example/demo/error/Invalid2FACodeException.java
package com.example.demo.error;

public class Invalid2FACodeException extends Exception{
    public Invalid2FACodeException(String message) {
        super(message);
    }
}
